zz-local-project7-notes/gateway-auth-yaml-examples/02-namespace-canary-label.yaml
apiVersion: v1
kind: Namespace
metadata:
  name: p7-demo
  labels:
    crownlabs.polito.it/gateway-route: "true"
