zz-local-project7-notes/gateway-auth-yaml-examples/11-referencegrant-extauth-service.yaml
apiVersion: gateway.networking.k8s.io/v1beta1
kind: ReferenceGrant
metadata:
  name: allow-securitypolicy-to-oauth2-proxy
  namespace: crownlabs-instances-auth
spec:
  from:
    - group: gateway.envoyproxy.io
      kind: SecurityPolicy
      namespace: p7-demo
  to:
    - group: ""
      kind: Service
