zz-local-project7-notes/gateway-auth-yaml-examples/04-httproute-standard-standalone-rewrite.yaml
apiVersion: gateway.networking.k8s.io/v1
kind: HTTPRoute
metadata:
  name: standard-standalone-route
  namespace: p7-demo
spec:
  parentRefs:
    - name: crownlabs-gw
      namespace: envoy-gateway-system
  hostnames:
    - crownlabs.polito.it
  rules:
    - matches:
        - path:
            type: PathPrefix
            value: /instance/cgvt7/standalone
      filters:
        - type: URLRewrite
          urlRewrite:
            path:
              type: ReplaceFullPath
              replaceFullPath: /
      backendRefs:
        - name: instance-cgvt7-standalone
          port: 80
