zz-local-project7-notes/gateway-auth-yaml-examples/05-httproute-exam-noauth.yaml
apiVersion: gateway.networking.k8s.io/v1
kind: HTTPRoute
metadata:
  name: exam-gui-route
  namespace: p7-demo
spec:
  parentRefs:
    - name: crownlabs-gw
      namespace: envoy-gateway-system
  hostnames:
    - exam.crownlabs.polito.it
  rules:
    - matches:
        - path:
            type: PathPrefix
            value: /instance/cgvt7/vscode
      backendRefs:
        - name: instance-cgvt7-vscode
          port: 80
