zz-local-project7-notes/gateway-auth-yaml-examples/07-securitypolicy-standard-oidc.yaml
apiVersion: gateway.envoyproxy.io/v1alpha1
kind: SecurityPolicy
metadata:
  name: standard-oidc-policy
  namespace: p7-demo
spec:
  targetRefs:
    - group: gateway.networking.k8s.io
      kind: HTTPRoute
      name: standard-gui-route
  oidc:
    provider:
      issuer: https://auth.crownlabs.polito.it/auth/realms/crownlabs
    clientID: user-instances
    clientSecret:
      name: oidc-client-secret
    scopes:
      - openid
      - profile
      - email
    forwardAccessToken: true
    redirectURL: https://crownlabs.polito.it/oauth2/callback
    logoutPath: /logout
